<resources>
    <string name="app_name">BINGO</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen1">Name</string>
    <string name="quit">QUIT</string>
    <string name="bingo">BINGO</string>
    <string name="start">PLAY</string>
    <string name="enter_player_name">Enter Your Name</string>
    <string name="name1">Name</string>
    <string name="title_activity_fullscreen2">Card</string>
    <string name="activity_settings">Settings</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="let_s_arrange_your_bingo_card">Make your card!</string>
    <string name="title_activity_fullscreen3">Game</string>
    <string name="next">NEXT</string>
    <string name="select_a_number">Select a number!</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="retry">Clear</string>
    <string name="sound">Sound: </string>
    <string name="change_name">Change Name</string>
    <string name="back">Back</string>
    <string name="settings">SETTINGS</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="how_to_play">How to play</string>
    <string name="title_activity_fullscreen4">Connect</string>
    <string name="connect_to_local_wifi_hotspot">Connect to local network</string>
    <string name="host">HOST</string>
    <string name="join">JOIN</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="title_activity_fullscreen5">Start</string>
    <string name="enter_no_of_players">Enter no of players</string>
    <string name="enter_game_name">Enter game name</string>
    <string name="turn_on_wifi_hotspot">Turn on WiFi hotspot</string>
    <string name="manually_connect_to_host_hotspot">Manually connect to host hotspot</string>
    <string name="connect_to_peers">Devices List</string>
    <string name="scan_for_devices">Scan</string>
    <string name="send">Test</string>
    <string name="enter_message">Enter message</string>
    <string name="connect_to_host">Connect to host</string>
    <string name="scan_for_hosts">Scan for hosts</string>
    <string name="establish_wi_fi_direct_p2p_connection">Establish Wi-Fi Direct P2P Connection</string>
    <string name="connect_using_wi_fi_p2p_direct">Connect using Wi-Fi P2P Direct</string>
    <string name="connect">CONNECT</string>
    <string name="ready">ARE YOU READY?</string>
    <string name="go">Let\'s Go</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="turn_on">TURN ON</string>
    <string name="rules">RULES</string>
    <string name="main_menu">Main Menu</string>
    <string name="play_again">Play Again</string>
</resources>