<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#04092B"
    android:theme="@style/Theme.Bingo"
    tools:context=".Home">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#91D2E8"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none"
            android:gravity="center"
            android:keepScreenOn="true"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="705dp"
                android:layout_height="596dp"
                android:contentDescription="@string/todo1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.592"
                app:srcCompat="@drawable/_0711" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:background="@drawable/btn_1"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/start"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#31302F"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.872" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:background="@drawable/btn_4"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#31302F"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="14dp"
                app:layout_constraintBottom_toTopOf="@+id/quit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start"
                app:layout_constraintVertical_bias="0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/quit"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_2"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/quit"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FEFDBD"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.499"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings"
                app:layout_constraintVertical_bias="0.20" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</FrameLayout>
